trunk/Source/include/GLS_CUDA_API.hpp


//-- type declarations -------------------------------------------------------
typedef void * TCUdeviceptr;


typedef int TCUdevice;


struct DECLSPEC_DRECORD TCUcontext
{
};



typedef TCUcontext *PCUcontext;


struct DECLSPEC_DRECORD TCUmodule
{
};



typedef TCUmodule *PCUmodule;


struct DECLSPEC_DRECORD TCUfunction
{
};



typedef TCUfunction *PCUfunction;


struct DECLSPEC_DRECORD TCUarray
{
};



typedef TCUarray *PCUarray;


struct DECLSPEC_DRECORD TCUtexref
{
};



typedef TCUtexref *PCUtexref;


struct DECLSPEC_DRECORD TCUevent
{
};



typedef TCUevent *PCUevent;


struct DECLSPEC_DRECORD TCUstream
{
};



typedef TCUstream *PCUstream;


struct DECLSPEC_DRECORD TCUgraphicsResource
{
};



typedef TCUgraphicsResource *PCUgraphicsResource;


typedef PCUgraphicsResource *PPCUgraphicsResource;


enum TCUctx_flags : unsigned int { CU_CTX_SCHED_AUTO, CU_CTX_SCHED_SPIN, CU_CTX_SCHED_YIELD, CU_CTX_SCHED_MASK, CU_CTX_BLOCKING_SYNC, CU_CTX_MAP_HOST = 8, CU_CTX_FLAGS_MASK = 15 };


enum TCUevent_flags : unsigned int { CU_EVENT_DEFAULT, CU_EVENT_BLOCKING_SYNC };


enum TCUarray_format : unsigned int { CU_AD_FORMAT_UNSIGNED_INT8 = 1, CU_AD_FORMAT_UNSIGNED_INT16, CU_AD_FORMAT_UNSIGNED_INT32, CU_AD_FORMAT_SIGNED_INT8 = 8, CU_AD_FORMAT_SIGNED_INT16, CU_AD_FORMAT_SIGNED_INT32, CU_AD_FORMAT_HALF = 16, CU_AD_FORMAT_FLOAT = 32 };


enum TCUaddress_mode : unsigned int { CU_TR_ADDRESS_MODE_WRAP, CU_TR_ADDRESS_MODE_CLAMP, CU_TR_ADDRESS_MODE_MIRROR };


enum TCUfilter_mode : unsigned int { CU_TR_FILTER_MODE_POINT, CU_TR_FILTER_MODE_LINEAR };


enum TCUdevice_attribute : unsigned int { CU_DEVICE_ATTRIBUTE_MAX_THREADS_PER_BLOCK = 1, CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_X, CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_Y, CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_Z, CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_X, CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_Y, CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_Z, CU_DEVICE_ATTRIBUTE_MAX_SHARED_MEMORY_PER_BLOCK, CU_DEVICE_ATTRIBUTE_SHARED_MEMORY_PER_BLOCK = 8, CU_DEVICE_ATTRIBUTE_TOTAL_CONSTANT_MEMORY, CU_DEVICE_ATTRIBUTE_WARP_SIZE, CU_DEVICE_ATTRIBUTE_MAX_PITCH, CU_DEVICE_ATTRIBUTE_MAX_REGISTERS_PER_BLOCK, CU_DEVICE_ATTRIBUTE_REGISTERS_PER_BLOCK = 12, CU_DEVICE_ATTRIBUTE_CLOCK_RATE, CU_DEVICE_ATTRIBUTE_TEXTURE_ALIGNMENT, CU_DEVICE_ATTRIBUTE_GPU_OVERLAP, CU_DEVICE_ATTRIBUTE_MULTIPROCESSOR_COUNT, 
	CU_DEVICE_ATTRIBUTE_KERNEL_EXEC_TIMEOUT, CU_DEVICE_ATTRIBUTE_INTEGRATED, CU_DEVICE_ATTRIBUTE_CAN_MAP_HOST_MEMORY, CU_DEVICE_ATTRIBUTE_COMPUTE_MODE };


enum TcudaLimit : unsigned int { cudaLimitStackSize, cudaLimitPrintfFifoSize };


struct DECLSPEC_DRECORD TCUdevprop
{
public:
	int maxThreadsPerBlock;
	System::StaticArray<int, 3> maxThreadsDim;
	System::StaticArray<int, 3> maxGridSize;
	int sharedMemPerBlock;
	int totalConstantMemory;
	int SIMDWidth;
	int memPitch;
	int regsPerBlock;
	int clockRate;
	int textureAlign;
};



enum TCUfunction_attribute : unsigned int { CU_FUNC_ATTRIBUTE_MAX_THREADS_PER_BLOCK, CU_FUNC_ATTRIBUTE_SHARED_SIZE_BYTES, CU_FUNC_ATTRIBUTE_CONST_SIZE_BYTES, CU_FUNC_ATTRIBUTE_LOCAL_SIZE_BYTES, CU_FUNC_ATTRIBUTE_NUM_REGS, CU_FUNC_ATTRIBUTE_MAX };


enum TCUmemorytype : unsigned int { CU_MEMORYTYPE_HOST = 1, CU_MEMORYTYPE_DEVICE, CU_MEMORYTYPE_ARRAY };


enum TCUcomputemode : unsigned int { CU_COMPUTEMODE_DEFAULT, CU_COMPUTEMODE_EXCLUSIVE, CU_COMPUTEMODE_PROHIBITED };


enum TCUjit_option : unsigned int { CU_JIT_MAX_REGISTERS, CU_JIT_THREADS_PER_BLOCK, CU_JIT_WALL_TIME, CU_JIT_INFO_LOG_BUFFER, CU_JIT_INFO_LOG_BUFFER_SIZE_BYTES, CU_JIT_ERROR_LOG_BUFFER, CU_JIT_ERROR_LOG_BUFFER_SIZE_BYTES, CU_JIT_OPTIMIZATION_LEVEL, CU_JIT_TARGET_FROM_CUCONTEXT, CU_JIT_TARGET, CU_JIT_FALLBACK_STRATEGY };


typedef TCUresult __stdcall (*TcuMemcpyDtoH)(const void * dstHost, void * srcDevice, unsigned ByteCount);


typedef TCUresult __stdcall (*TcuMemcpyAtoH)(void * dstHost, PCUarray srcArray, unsigned SrcIndex, unsigned ByteCount);


//-- var, const, procedure ---------------------------------------------------
#define CUDAAPIDLL L"nvcuda.dll"

extern PACKAGE TcuMemcpyDtoH cuMemcpyDtoH;

extern PACKAGE TcuMemcpyAtoH cuMemcpyAtoH;