tags/GLScene v1.1/Source/ComputeAPIs/GLS_CUDA_API.pas

//
// This unit is part of the GLScene Project, http://glscene.org
//
{: GLS_CUDA_API<p>

   <b>History : </b><font size=-1><ul>
      <li>08/04/10 - Yar - Corrected parameters of cuMemcpyDtoH, cuMemcpyAtoH
      <li>02/03/10 - Yar - Added missing constants, correct parameters of some functions
      <li>28/01/10 - Yar - Creation
   </ul></font>
}

///*
// * Copyright 1993-2009 NVIDIA Corporation.  All rights reserved.
// *
// * NOTICE TO USER:
// *
// * This source code is subject to NVIDIA ownership rights under U.S. and
// * international Copyright laws.  Users and possessors of this source code
// * are hereby granted a nonexclusive, royalty-free license to use this code
// * in individual and commercial software.
// *
// * NVIDIA MAKES NO REPRESENTATION ABOUT THE SUITABILITY OF THIS SOURCE
// * CODE FOR ANY PURPOSE.  IT IS PROVIDED "AS IS" WITHOUT EXPRESS OR
// * IMPLIED WARRANTY OF ANY KIND.  NVIDIA DISCLAIMS ALL WARRANTIES WITH
// * REGARD TO THIS SOURCE CODE, INCLUDING ALL IMPLIED WARRANTIES OF
// * MERCHANTABILITY, NONINFRINGEMENT, AND FITNESS FOR A PARTICULAR PURPOSE.
// * IN NO EVENT SHALL NVIDIA BE LIABLE FOR ANY SPECIAL, INDIRECT, INCIDENTAL,
// * OR CONSEQUENTIAL DAMAGES, OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS
// * OF USE, DATA OR PROFITS,  WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE
// * OR OTHER TORTIOUS ACTION,  ARISING OUT OF OR IN CONNECTION WITH THE USE
// * OR PERFORMANCE OF THIS SOURCE CODE.
// *
// * U.S. Government End Users.   This source code is a "commercial item" as
// * that term is defined at  48 C.F.R. 2.101 (OCT 1995), consisting  of
// * "commercial computer  software"  and "commercial computer software
// * documentation" as such terms are  used in 48 C.F.R. 12.212 (SEPT 1995)
// * and is provided to the U.S. Government only as a commercial end item.
// * Consistent with 48 C.F.R.12.212 and 48 C.F.R. 227.7202-1 through
// * 227.7202-4 (JUNE 1995), all U.S. Government End Users acquire the
// * source code with only those rights set forth herein.
// *
// * Any use of this source code in individual and commercial software must
// * include, in the user documentation and internal comments to the code,
// * the above Disclaimer and U.S. Government End Users Notice.
// */

unit GLS_CUDA_API;

interface

uses
{$IFDEF MSWINDOWS}Windows, {$ENDIF}
  GLS_CL_Platform;

{$I cuda.inc}

const
  CUDAAPIDLL = 'nvcuda.dll';

type

  TCUdeviceptr = Pointer; ///< CUDA device pointer

  TCUdevice = Integer; ///< CUDA device

  PCUcontext = ^TCUcontext;
  TCUcontext = record
  end; ///< CUDA context
  PCUmodule = ^TCUmodule;
  TCUmodule = record
  end; ///< CUDA module
  PCUfunction = ^TCUfunction;
  TCUfunction = record
  end; ///< CUDA function
  PCUarray = ^TCUarray;
  TCUarray = record
  end; ///< CUDA array
  PCUtexref = ^TCUtexref;
  TCUtexref = record
  end; ///< CUDA texture reference
  PCUevent = ^TCUevent;
  TCUevent = record
  end; ///< CUDA event
  PCUstream = ^TCUstream;
  TCUstream = record
  end; ///< CUDA stream
  PPCUgraphicsResource = ^PCUgraphicsResource;
  PCUgraphicsResource = ^TCUgraphicsResource;
  TCUgraphicsResource = record
  end; ///< CUDA graphics interop resource

  // Context creation flags

  TCUctx_flags = (
    CU_CTX_SCHED_AUTO = 0, ///< Automatic scheduling
    CU_CTX_SCHED_SPIN = 1, ///< Set spin as default scheduling
    CU_CTX_SCHED_YIELD = 2, ///< Set yield as default scheduling
    CU_CTX_SCHED_MASK = 3,
    CU_CTX_BLOCKING_SYNC = 4, ///< Use blocking synchronization
    CU_CTX_MAP_HOST = 8, ///< Support mapped pinned allocations
    CU_CTX_FLAGS_MASK = 15
    );

  // Event creation flags

  TCUevent_flags = (
    CU_EVENT_DEFAULT = 0, ///< Default event flag
    CU_EVENT_BLOCKING_SYNC = 1 ///< Event uses blocking synchronization
    );

  // Array formats

  TCUarray_format = (
    CU_AD_FORMAT_UNSIGNED_INT8 = $01, ///< Unsigned 8-bit integers
    CU_AD_FORMAT_UNSIGNED_INT16 = $02, ///< Unsigned 16-bit integers
    CU_AD_FORMAT_UNSIGNED_INT32 = $03, ///< Unsigned 32-bit integers
    CU_AD_FORMAT_SIGNED_INT8 = $08, ///< Signed 8-bit integers
    CU_AD_FORMAT_SIGNED_INT16 = $09, ///< Signed 16-bit integers
    CU_AD_FORMAT_SIGNED_INT32 = $0A, ///< Signed 32-bit integers
    CU_AD_FORMAT_HALF = $10, ///< 16-bit floating point
    CU_AD_FORMAT_FLOAT = $20 ///< 32-bit floating point
    );

  // Texture reference addressing modes

  TCUaddress_mode = (
    CU_TR_ADDRESS_MODE_WRAP = 0, ///< Wrapping address mode
    CU_TR_ADDRESS_MODE_CLAMP = 1, ///< Clamp to edge address mode
    CU_TR_ADDRESS_MODE_MIRROR = 2 ///< Mirror address mode
    );

  // Texture reference filtering modes

  TCUfilter_mode = (
    CU_TR_FILTER_MODE_POINT = 0, ///< Point filter mode
    CU_TR_FILTER_MODE_LINEAR = 1 ///< Linear filter mode
    );

  // Device properties

  TCUdevice_attribute = (
    CU_DEVICE_ATTRIBUTE_MAX_THREADS_PER_BLOCK = 1,
    ///< Maximum number of threads per block
    CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_X = 2, ///< Maximum block dimension X
    CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_Y = 3, ///< Maximum block dimension Y
    CU_DEVICE_ATTRIBUTE_MAX_BLOCK_DIM_Z = 4, ///< Maximum block dimension Z
    CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_X = 5, ///< Maximum grid dimension X
    CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_Y = 6, ///< Maximum grid dimension Y
    CU_DEVICE_ATTRIBUTE_MAX_GRID_DIM_Z = 7, ///< Maximum grid dimension Z
    CU_DEVICE_ATTRIBUTE_MAX_SHARED_MEMORY_PER_BLOCK = 8,
    ///< Maximum shared memory available per block in bytes
    CU_DEVICE_ATTRIBUTE_SHARED_MEMORY_PER_BLOCK = 8,
    ///< Deprecated, use CU_DEVICE_ATTRIBUTE_MAX_SHARED_MEMORY_PER_BLOCK
    CU_DEVICE_ATTRIBUTE_TOTAL_CONSTANT_MEMORY = 9,
    ///< Memory available on device for __constant__ variables in a CUDA C kernel in bytes
    CU_DEVICE_ATTRIBUTE_WARP_SIZE = 10, ///< Warp size in threads
    CU_DEVICE_ATTRIBUTE_MAX_PITCH = 11,
    ///< Maximum pitch in bytes allowed by memory copies
    CU_DEVICE_ATTRIBUTE_MAX_REGISTERS_PER_BLOCK = 12,
    ///< Maximum number of 32-bit registers available per block
    CU_DEVICE_ATTRIBUTE_REGISTERS_PER_BLOCK = 12,
    ///< Deprecated, use CU_DEVICE_ATTRIBUTE_MAX_REGISTERS_PER_BLOCK
    CU_DEVICE_ATTRIBUTE_CLOCK_RATE = 13, ///< Peak clock frequency in kilohertz
    CU_DEVICE_ATTRIBUTE_TEXTURE_ALIGNMENT = 14,
    ///< Alignment requirement for textures

    CU_DEVICE_ATTRIBUTE_GPU_OVERLAP = 15,
    ///< Device can possibly copy memory and execute a kernel concurrently
    CU_DEVICE_ATTRIBUTE_MULTIPROCESSOR_COUNT = 16,
    ///< Number of multiprocessors on device
    CU_DEVICE_ATTRIBUTE_KERNEL_EXEC_TIMEOUT = 17,
    ///< Specifies whether there is a run time limit on kernels
    CU_DEVICE_ATTRIBUTE_INTEGRATED = 18,
    ///< Device is integrated with host memory
    CU_DEVICE_ATTRIBUTE_CAN_MAP_HOST_MEMORY = 19,
    ///< Device can map host memory into CUDA address space
    CU_DEVICE_ATTRIBUTE_COMPUTE_MODE = 20
    ///< Compute mode (See ::CUcomputemode for details)
    );


(**
 * CUDA Limits
 *)
  TcudaLimit = (
    cudaLimitStackSize      = $00, ///< GPU thread stack size
    cudaLimitPrintfFifoSize = $01  ///< GPU printf FIFO size
  );

  // Legacy device properties

  TCUdevprop = record
    maxThreadsPerBlock: Integer; ///< Maximum number of threads per block
    maxThreadsDim: array[0..2] of Integer;
    ///< Maximum size of each dimension of a block
    maxGridSize: array[0..2] of Integer;
    ///< Maximum size of each dimension of a grid
    sharedMemPerBlock: Integer; ///< Shared memory available per block in bytes
    totalConstantMemory: Integer;
    ///< Constant memory available on device in bytes
    SIMDWidth: Integer; ///< Warp size in threads
    memPitch: Integer; ///< Maximum pitch in bytes allowed by memory copies
    regsPerBlock: Integer; ///< 32-bit registers available per block
    clockRate: Integer; ///< Clock frequency in kilohertz
    textureAlign: Integer; ///< Alignment requirement for textures
  end;

  // Function properties

  TCUfunction_attribute = (

    {    * The number of threads beyond which a launch of the function would fail.
         * This number depends on both the function and the device on which the
         * function is currently loaded. }

    CU_FUNC_ATTRIBUTE_MAX_THREADS_PER_BLOCK = 0,

    {    * The size in bytes of statically-allocated shared memory required by
         * this function. This does not include dynamically-allocated shared
         * memory requested by the user at runtime.     }

    CU_FUNC_ATTRIBUTE_SHARED_SIZE_BYTES = 1,

    {    * The size in bytes of user-allocated constant memory required by this
         * function.     }

    CU_FUNC_ATTRIBUTE_CONST_SIZE_BYTES = 2,

    {     * The size in bytes of thread local memory used by this function.}

    CU_FUNC_ATTRIBUTE_LOCAL_SIZE_BYTES = 3,

    {     * The number of registers used by each thread of this function.}

    CU_FUNC_ATTRIBUTE_NUM_REGS = 4,

    CU_FUNC_ATTRIBUTE_MAX
    );

  // Memory types

  TCUmemorytype = (
    CU_MEMORYTYPE_HOST = $01, ///< Host memory
    CU_MEMORYTYPE_DEVICE = $02, ///< Device memory
    CU_MEMORYTYPE_ARRAY = $03 ///< Array memory
    );

  // Compute Modes

  TCUcomputemode = (
    CU_COMPUTEMODE_DEFAULT = 0,
    ///< Default compute mode (Multiple contexts allowed per device)
    CU_COMPUTEMODE_EXCLUSIVE = 1,
    ///< Compute-exclusive mode (Only one context can be present on this device at a time)
    CU_COMPUTEMODE_PROHIBITED = 2
    ///< Compute-prohibited mode (No contexts can be created on this device at this time)
    );

  // Online compiler options

  TCUjit_option = (
    {     * Max number of registers that a thread may use.}

    CU_JIT_MAX_REGISTERS = 0,

    {    * IN: Specifies minimum number of threads per block to target compilation
         * for\n
         * OUT: Returns the number of threads the compiler actually targeted.
         * This restricts the resource utilization fo the compiler (e.g. max
         * registers) such that a block with the given number of threads should be
         * able to launch based on register limitations. Note, this option does not
         * currently take into account any other resource limitations, such as
         * shared memory utilization.  }

    CU_JIT_THREADS_PER_BLOCK,

    {    * Returns a float value in the option of the wall clock time, in
         * milliseconds, spent creating the cubin}

    CU_JIT_WALL_TIME,

    {     * Pointer to a buffer in which to print any log messsages from PTXAS
         * that are informational in nature  }

    CU_JIT_INFO_LOG_BUFFER,

    {    * IN: Log buffer size in bytes.  Log messages will be capped at this size
         * (including null terminator)\n
         * OUT: Amount of log buffer filled with messages   }

    CU_JIT_INFO_LOG_BUFFER_SIZE_BYTES,

    {    * Pointer to a buffer in which to print any log messages from PTXAS that
         * reflect errors }

    CU_JIT_ERROR_LOG_BUFFER,

    {    * IN: Log buffer size in bytes.  Log messages will be capped at this size
         * (including null terminator)\n
         * OUT: Amount of log buffer filled with messages  }

    CU_JIT_ERROR_LOG_BUFFER_SIZE_BYTES,

    {    * Level of optimizations to apply to generated code (0 - 4), with 4
         * being the default and highest level of optimizations.  }

    CU_JIT_OPTIMIZATION_LEVEL,

    {    * No option value required. Determines the target based on the current
         * attached context (default)    }

    CU_JIT_TARGET_FROM_CUCONTEXT,

    {    * Target is chosen based on supplied CUjit_target_enum.   }

    CU_JIT_TARGET,

    {    * Specifies choice of fallback strategy if matching cubin is not found.
         * Choice is based on supplied CUjit_fallback_enum. }

    CU_JIT_FALLBACK_STRATEGY

    );

  // Online compilation targets

  TCUjit_target = (
